--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <!-- Simple heading + instructions -->
   <h1>Simon Says…</h1>
   <p>Repeat the pattern. How far can you go?</p>
+  <button id="startBtn">Start Game</button>
+
 
   <!-- The four colored pads live in a 2×2 CSS Grid -->
   <div id="board">
